syntax = "proto3";

package mastercontrol;

import "deltav/common/position.proto";

// message DetectableProperty{
//     enum Type {
//         UNKNOWN = 0;
//         RF = 1;
//         GAMMA = 2;
//         THERM = 3;
//     }
//     Type type = 1;
//     float intensity = 2;
// }

message RegisterRequest {
    Position position = 1;
    // repeated DetectableProperty properties = 2;
    // repeated
}

message RegisterResponse {
}

message DetectRequest {
}

message DetectResponse{
}


message GetRequest {
}

message GetResponse{
}

service WorldModel
 {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Detect(DetectRequest) returns (DetectResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
 }

